--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,22 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
+.circle {
+  width: 100vh;
+  height: 100vh;
+  border-radius: 50%;
+  opacity: 0.1;
+  position: absolute;
+  z-index: 999;
+  background-color: green;
+  margin: auto;
+}
+
+@media screen and (max-width: 480px) {
+  .circle {
+    display: none;
+  }
+}
 
 a {
   color: inherit;
